--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,96 @@
-{\rtf1}
+body {
+    background-color: rgb(237, 237, 237);
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    background-color: orangered;
+}
+
+header h1 {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+}
+
+header h2 {
+    margin-bottom: 0;
+    display: flex;
+    justify-content: center;
+}
+
+header h3 {
+    display: flex;
+    justify-content: center;
+}
+
+.navbar {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: row;
+}
+
+.box {
+    flex-grow: 1;
+    border: 1px solid #111111;
+    text-align: center;
+}
+
+header div div a {
+    text-decoration: none;
+    color: whitesmoke;
+}
+
+main {
+    display: flex;
+    height: 750px;
+}
+
+main aside {
+    flex-grow: 2;
+}
+main article {
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 10;
+}
+
+#left {
+    background-color: rgb(95, 253, 253);
+}
+
+main article div {
+    flex: 1 0 300px;    
+    border: 1px dashed whitesmoke;
+    background-color: #1d1d1d;
+    color: whitesmoke;
+}
+
+main article div p {
+        
+}
+
+#right {
+    background-color: rgb(160, 73, 242);
+}
+
+h1 {
+    font-size: 45px;
+    font-weight: bolder;
+    text-transform: uppercase;
+
+}
+footer {
+    background-color: blue;
+    margin: auto;
+}
+
+footer h2 {
+    margin: auto;
+    padding: 15px 0;
+    text-align: center;
+    background-color: blue;
+    color: white;
+}
+
